fix font size on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -327,7 +327,7 @@ div {
   background-size: 100% 100%;
 }
 .card-selection-option.card_commoner .flip-card-front {
-  background-image: url('../static/commoner-card-back.png');
+  background-image: url('../static/commoner-card-back-2.png');
 }
 .card-selection-option.card_mp .flip-card-front {
   background-image: url('../static/mp-card-back.png');
@@ -341,6 +341,7 @@ div {
 
 .flip-card-front {
   background-color: transparent;
+  padding: min(1.5vw, 3vh);
 }
 
 #cards-selection-container:not(.computer-selection) .flip-card-front:hover {
@@ -449,6 +450,7 @@ div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: scroll;
 }
 
 .game-overlay-content-divider {
@@ -529,7 +531,7 @@ div {
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
 }
 
 .flip-card.flipped .flip-card-inner {
@@ -621,4 +623,164 @@ div {
 .eightbit-btn,
 button {
   z-index: 1; /* kind of a hack to access buttons above canvas, maybe fix another way... */
+}
+
+/*************
+ * Mobile overrides
+ *************/
+
+@media only screen and (max-width: 768px) {
+  #game-header h1 {
+    font-size: min(4vw, 8vh); /* 40px */
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1.5px 0 #000, 0.5px 0.5px 0 #000;
+  }
+
+  #game-header h4 {
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 0.5px 0.5px 0 #000;
+    font-size: min(1.5vw, 3vh); /* 16px */
+  }
+
+  h3 {
+    font-size: min(2vw, 4vh); /* 16px */
+  }
+
+  a,
+  p,
+  div {
+    font-size: min(1.5vw, 3vh);
+  }
+
+  #game-overlay-content-single > p,
+  #game-overlay-content-multi > p {
+    font-size: min(1.5vw, 3vh);
+  }
+
+  #next-turn-state {
+    padding: min(2vw, 4vh);
+  }
+
+  #card-text,
+  #card-position-change-text,
+  #card-close-button,
+  #card-player-subtitle,
+  #card-text i {
+    font-size: min(1vw, 2vh);
+    line-height: 1.3;
+  }
+
+  /* BUTTONS */
+  .eightbit-btn {
+    background: #92cd41;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    font-size: min(2.25vw, 4.5vh); /* 30px */
+    padding: min(1.5vw, 3vh); /* 30px */
+    font-family: 'Press Start 2P', cursive;
+    text-decoration: none;
+    color: white;
+    box-shadow: inset -2px -2px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:hover,
+  .eightbit-btn:focus {
+    background: #76c442;
+    box-shadow: inset -3px -3px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:active {
+    box-shadow: inset 2px 2px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:before,
+  .eightbit-btn:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
+  }
+  .eightbit-btn:before {
+    top: -3px;
+    left: 0;
+    border-top: 3px black solid;
+    border-bottom: 3px black solid;
+  }
+  .eightbit-btn:after {
+    left: -3px;
+    top: 0;
+    border-left: 3px black solid;
+    border-right: 3px black solid;
+  }
+  .eightbit-btn--reset {
+    background: #e76e55;
+    box-shadow: inset -2px -2px 0px 0px #8c2022;
+  }
+  .eightbit-btn--reset:hover,
+  .eightbit-btn--reset:focus {
+    background: #ce372b;
+    box-shadow: inset -3px -3px 0px 0px #8c2022;
+  }
+  .eightbit-btn--reset:active {
+    box-shadow: inset 2px 2px 0px 0px #8c2022;
+  }
+  .eightbit-btn--proceed {
+    background: #f7d51d;
+    box-shadow: inset -2px -2px 0px 0px #e59400;
+  }
+  .eightbit-btn--proceed:hover,
+  .eightbit-btn--proceed:focus {
+    background: #f2c409;
+    box-shadow: inset -3px -3px 0px 0px #e59400;
+  }
+  .eightbit-btn--proceed:active {
+    box-shadow: inset 2px 2px 0px 0px #e59400;
+  }
+
+  .eightbit-btn,
+  button {
+    z-index: 1; /* kind of a hack to access buttons above canvas, maybe fix another way... */
+  }
+}
+
+@media only screen and (max-width: 384px) {
+  /* BUTTONS */
+  .eightbit-btn {
+    box-shadow: inset -1px -1px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:hover,
+  .eightbit-btn:focus {
+    box-shadow: inset -1.5px -1.5px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:active {
+    box-shadow: inset 1px 1px 0px 0px #4aa52e;
+  }
+  .eightbit-btn:before {
+    top: -1.5px;
+    left: 0;
+    border-top: 1.5px black solid;
+    border-bottom: 1.5px black solid;
+  }
+  .eightbit-btn:after {
+    left: -1.5px;
+    border-left: 1.5px black solid;
+    border-right: 1.5px black solid;
+  }
+  .eightbit-btn--reset {
+    box-shadow: inset -1px -1px 0px 0px #8c2022;
+  }
+  .eightbit-btn--reset:hover,
+  .eightbit-btn--reset:focus {
+    box-shadow: inset -1.5px -1.5px 0px 0px #8c2022;
+  }
+  .eightbit-btn--reset:active {
+    box-shadow: inset 1px 1px 0px 0px #8c2022;
+  }
+  .eightbit-btn--proceed {
+    box-shadow: inset -1px -1px 0px 0px #e59400;
+  }
+  .eightbit-btn--proceed:hover,
+  .eightbit-btn--proceed:focus {
+    box-shadow: inset -1.5px -1.5px 0px 0px #e59400;
+  }
+  .eightbit-btn--proceed:active {
+    box-shadow: inset 1px 1px 0px 0px #e59400;
+  }
 }
